--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@angular/material": "^20.1.4",
     "@angular/platform-browser": "^20.1.0",
     "@angular/router": "^20.1.0",
+    "animate.css": "^4.1.1",
+    "bootstrap": "^5.3.7",
     "chart.js": "^4.5.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
