--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "jspdf-autotable": "^5.0.2",
     "ng2-charts": "^8.0.0",
     "ngx-toastr": "^19.0.0",
+    "pdf-lib": "^1.17.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
